[package]
name        = "raxis-live-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Out-of-band end-to-end suite for RAXIS that exercises real subsystems against real upstream services. Never linked into a release binary; never run by `cargo test`."

[[bin]]
name = "raxis-live-e2e"
path = "src/main.rs"

[dependencies]
raxis-gateway              = { path = "../gateway" }
raxis-gateway-substrate    = { path = "../crates/gateway-substrate" }
raxis-ipc                  = { path = "../crates/ipc" }
raxis-credentials          = { path = "../crates/raxis-credentials" }
raxis-credentials-file     = { path = "../crates/raxis-credentials-file" }
raxis-credential-proxy-postgres = { path = "../crates/credential-proxy-postgres" }
raxis-credential-proxy-http     = { path = "../crates/credential-proxy-http" }
raxis-credential-proxy-smtp     = { path = "../crates/credential-proxy-smtp" }
raxis-credential-proxy-redis    = { path = "../crates/credential-proxy-redis" }
raxis-credential-proxy-aws      = { path = "../crates/credential-proxy-aws" }
raxis-credential-proxy-gcp      = { path = "../crates/credential-proxy-gcp" }
raxis-credential-proxy-azure    = { path = "../crates/credential-proxy-azure" }
raxis-credential-proxy-mysql    = { path = "../crates/credential-proxy-mysql" }
raxis-credential-proxy-mssql    = { path = "../crates/credential-proxy-mssql" }
raxis-credential-proxy-mongodb  = { path = "../crates/credential-proxy-mongodb" }
raxis-credential-proxy-manager  = { path = "../crates/credential-proxy-manager" }
raxis-credential-proxy-cloud-shared = { path = "../crates/credential-proxy-cloud-shared" }
raxis-egress-admission     = { path = "../crates/egress-admission" }
raxis-isolation            = { path = "../crates/isolation" }
raxis-plan-credentials     = { path = "../crates/plan-credentials" }
raxis-session-spawn        = { path = "../crates/session-spawn" }
raxis-tproxy-protocol      = { path = "../crates/tproxy-protocol" }
raxis-genesis-tools        = { path = "../crates/genesis-tools" }
raxis-test-support         = { path = "../crates/test-support" }
raxis-audit-tools          = { path = "../crates/audit" }
raxis-types                = { path = "../crates/types" }

tokio       = { workspace = true }
# Outbound HTTPS client for the V3-readiness real-endpoint cloud
# slices (`slice_{aws,gcp,azure}_proxy_real_endpoint.rs`). The
# rustls-tls feature avoids a dynamic libssl dependency on Linux
# CI workers; gzip is needed because GCP / Azure error responses
# are sometimes content-encoded.
reqwest     = { workspace = true }
serde_json  = { workspace = true }
hex         = { workspace = true }
uuid        = { workspace = true }
tempfile    = "3"
ed25519-dalek = { workspace = true }
toml        = { workspace = true }
clap        = { version = "4", features = ["derive"] }
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
base64      = "0.22"
# RSA key generation for the V3-forwarding GCP witness — the
# witness ships a throwaway PKCS#8 PEM the proxy signs a JWT
# with so the upstream `oauth2.googleapis.com` exchange path
# is exercised end-to-end.
rsa         = { workspace = true, features = ["sha2"] }
rand_core   = "0.6"
