[package]
name        = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish     = false

# Workspace task runner. Invoked as `cargo xtask <target>` via the
# `.cargo/config.toml` alias, never built or shipped.
#
# Normative reference: `specs/v2/v2-deep-spec.md §Spec-Graph Lint`.

[dependencies]
anyhow    = { workspace = true }
toml      = { workspace = true }
walkdir   = "2"
regex     = "1"
# Used by `cargo xtask dev-keys init` (the local-build signing
# helper from `release-and-distribution.md §8.1–§8.2`). Generates
# an Ed25519 keypair on the OS RNG and emits the private/public
# halves as hex files matching the formats RAXIS_IMAGE_SIGNING_KEY
# and RAXIS_KERNEL_SIGNING_KEY_HEX expect.
ed25519-dalek = { workspace = true }
hex           = { workspace = true }
rand          = "0.8"
# Used by `cargo xtask images dev-kernel` to verify the SHA-256 the
# operator pinned for the staged guest-kernel binary. Workspace-pinned
# so all crates in the tree resolve to one transitive sha2 version.
sha2          = { workspace = true }
# `cargo xtask images dev-stage` + `build-all` consume the typed
# manifest builder + initramfs writer to produce the macOS-hermetic
# dev pipeline output (signed initramfs cpio.gz blobs under
# `$RAXIS_INSTALL_DIR/images/`). Workspace-paths so xtask never falls
# behind the producer crates.
raxis-image-builder      = { workspace = true }
raxis-image-manifest     = { workspace = true }
raxis-initramfs-builder  = { workspace = true }

# Used by `cargo xtask linux-prereqs` to call `getgroups(2)` directly
# rather than dragging in `nix` / `users` for a single syscall. The
# call site is gated on `target_os = "linux"`; on macOS the dep is
# unused but link-clean.
libc          = { workspace = true }

tokio         = { workspace = true }
serde_json    = { workspace = true }
chrono        = { version = "0.4", default-features = false, features = ["clock"] }
raxis-isolation         = { path = "../crates/isolation" }
raxis-test-support      = { path = "../crates/test-support" }
raxis-observability     = { path = "../crates/observability" }
# `cargo xtask dev-reset notifications` opens kernel.db read-write to
# truncate the `notifications` table without touching any other row.
# The audit chain is in `<data_dir>/audit/` (a separate JSONL store)
# so wiping the SQLite table never touches it. Workspace-pinned to
# the same rusqlite version raxis-store uses.
rusqlite     = { workspace = true }
tempfile     = "3"
