[package]
name        = "raxis-audit-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
uuid        = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
raxis-types = { workspace = true }

[dev-dependencies]
tempfile    = "3"
