[package]
name        = "raxis-canonical-images"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }
description = "RAXIS V2 — kernel-pinned canonical VM image trust anchors. Carries `EXPECTED_KERNEL_SIGNING_KEY_FP` (the SHA-256 fingerprint of the kernel signing key); reads + verifies on-disk `<role>-<kernel_version>.manifest.toml` files via raxis-image-manifest; uses the manifest's signed `image_artefact_sha256` to verify the on-disk .img bytes at every Reviewer (INV-PLANNER-HARNESS-02) / Orchestrator (INV-PLANNER-HARNESS-05) activation."

[dependencies]
ed25519-dalek        = { workspace = true }
raxis-image-manifest = { path = "../image-manifest" }
sha2                 = { workspace = true }
thiserror            = { workspace = true }

# `crates/canonical-images/build.rs` (iter62 — INV-IMAGE-TRUST-ANCHOR-DEV-FALLBACK-01)
# routes the trust-anchor resolution chain through this crate so the
# kernel-side seam writes the same `.git/info/raxis-signing-key/`
# artefact the xtask seam writes (xtask iter61 was the FIRST autogen
# entry point; the kernel build script is the SECOND). The crate is
# pure-Rust (`ed25519-dalek` + `getrandom` + `hex`) with no async or
# tokio surface — safely loadable at build-script time.
[build-dependencies]
raxis-dev-signing-key = { path = "../dev-signing-key" }

[dev-dependencies]
hex      = { workspace = true }
rand     = "0.8"
tempfile = "3"
