[package]
name        = "raxis-credential-proxy-azure"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Azure IMDS-compatible credential proxy. Emits /metadata/identity/oauth2/token responses scoped to operator-allowed resources so the Azure SDK / az CLI authenticate against the kernel CredentialBackend without the service-principal secret ever crossing the VM boundary."

[lib]
path = "src/lib.rs"

[dependencies]
raxis-credentials = { workspace = true }

tokio     = { workspace = true }
httparse  = "1"
bytes     = "1"
serde     = { workspace = true }
serde_json = { workspace = true }
sha2      = { workspace = true }
hex       = { workspace = true }
thiserror = { workspace = true }
tracing   = "0.1"

[dev-dependencies]
tokio    = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
